Model out of train

--- a/sft/accelerate ds/colab_run.ipynb
+++ b/sft/accelerate ds/colab_run.ipynb
@@ -171,8 +171,8 @@
         "accelerate_config = dict(\n",
         "    compute_environment = 'LOCAL_MACHINE',\n",
         "    deepspeed_config = dict(\n",
-        "        deepspeed_config_file = 'c',\n",
-        "        zero3_init_flag = True\n",
+        "        # deepspeed_config_file = 'c',\n",
+        "        # zero3_init_flag = True\n",
         "    ),\n",
         "    distributed_type = 'DEEPSPEED',\n",
         "    fsdp_config = dict(),\n",
@@ -228,7 +228,7 @@
       },
       "outputs": [],
       "source": [
-        "!accelerate launch --tpu --downcast_bf16 --mixed_precision $mixed_precision /content/CQA_RLHF/sft/accelerate/train_accelerate.py --mixed_precision $mixed_precision --output_dir $output_dir --data_path $data_path --config_file $config_file"
+        "!accelerate launch --tpu --downcast_bf16 --mixed_precision $mixed_precision \"/content/CQA_RLHF/sft/accelerate ds/train_accelerate_ds.py\" --mixed_precision $mixed_precision --output_dir $output_dir --data_path $data_path --config_file $config_file"
       ]
     },
     {
