Created notebook for TPU usage

--- a/sft/accelerate ds/colab_run.ipynb
+++ b/sft/accelerate ds/colab_run.ipynb
@@ -187,7 +187,7 @@
         "\n",
         ")\n",
         "\n",
-        "with open('accelerate_config.yaml', 'w') as outfile:\n",
+        "with open('default_config.yaml', 'w') as outfile:\n",
         "    yaml.dump(accelerate_config, outfile, default_flow_style=False)"
       ]
     },
@@ -197,7 +197,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!mv accelerate_config.yaml "
+        "!mv default_config.yaml /root/.cache/huggingface/accelerate/"
       ]
     },
     {
@@ -210,7 +210,7 @@
       "source": [
         "mixed_precision = 'bf16'\n",
         "output_dir = r'/content/drive/MyDrive/Diploma/Checkpoints'\n",
-        "data_path = r'/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep-test.json'\n",
+        "data_path = r'/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep.json'\n",
         "\n",
         "num_processes = '8'\n",
         "config_file = r'/content/CQA_RLHF/sft/accelerate/config.yaml'"
