Added DeepSpeed config to notebobok

--- a/sft/accelerate ds/colab_nb_launch.ipynb
+++ b/sft/accelerate ds/colab_nb_launch.ipynb
@@ -23,7 +23,8 @@
     "import yaml\n",
     "from yaml import CLoader\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "import json"
    ]
   },
   {
@@ -61,6 +62,69 @@
     "\n",
     "with open(\"trainer_config.yaml\", \"w\") as outfile:\n",
     "    yaml.dump(trainer_config, outfile, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_config = {\n",
+    "    \"bf16\": {\"enabled\": True},\n",
+    "    \"zero_optimization\": {\n",
+    "        \"stage\": 3,\n",
+    "        \"stage3_gather_16bit_weights_on_model_save\": False,\n",
+    "        \"offload_optimizer\": {\"device\": None},\n",
+    "        \"offload_param\": {\"device\": None},\n",
+    "    },\n",
+    "    \"gradient_clipping\": 1.0,\n",
+    "    \"train_batch_size\": \"auto\",\n",
+    "    \"train_micro_batch_size_per_gpu\": \"auto\",\n",
+    "    \"gradient_accumulation_steps\": 1,\n",
+    "    \"steps_per_print\": 2000000,\n",
+    "}\n",
+    "\n",
+    "with open('ds-config.json', 'w') as f:\n",
+    "    json.dump(ds_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accelerate_config = dict(\n",
+    "    compute_environment = 'LOCAL_MACHINE',\n",
+    "    deepspeed_config = dict(\n",
+    "        # deepspeed_config_file = 'c',\n",
+    "        # zero3_init_flag = True\n",
+    "    ),\n",
+    "    distributed_type = 'TPU',\n",
+    "    fsdp_config = dict(),\n",
+    "    machine_rank = 0,\n",
+    "    main_process_ip = None,\n",
+    "    main_process_port = None,\n",
+    "    main_training_function = 'main',\n",
+    "    mixed_precision = 'bf16',\n",
+    "    num_machines = 1,\n",
+    "    num_processes = 8,\n",
+    "    use_cpu = False\n",
+    "\n",
+    ")\n",
+    "\n",
+    "with open('default_config.yaml', 'w') as outfile:\n",
+    "    yaml.dump(accelerate_config, outfile, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv default_config.yaml /root/.cache/huggingface/accelerate/"
    ]
   },
   {
