Fixed variables names

--- a/sft/lightning/run_train.ipynb
+++ b/sft/lightning/run_train.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install cloud-tpu-client https://storage.googleapis.com/tpu-pytorch/wheels/torch_xla-1.12-cp39-cp39m-linux_x86_64.whl"
+    "!pip install cloud-tpu-client==0.10 torch==1.13.0 torchvision==0.13.0 https://storage.googleapis.com/tpu-pytorch/wheels/colab/torch_xla-1.13-cp38-cp38-linux_x86_64.whl"
    ]
   },
   {
@@ -16,6 +16,15 @@
    "outputs": [],
    "source": [
     "!pip install pytorch-lightning bert_score datasets rouge_score evaluate transformers wandb accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/Myashka/CQA_RLHF.git"
    ]
   },
   {
@@ -62,7 +71,7 @@
     "        do_freeze=True,\n",
     "        use_cache=False,\n",
     "        warmup_steps=100,\n",
-    "        adam_epsilon=[0.9, 0.95],\n",
+    "        adam_betas=[0.9, 0.95],\n",
     "        weight_decay=0.001,\n",
     "    ),\n",
     "    trainer=dict(\n",
@@ -71,7 +80,7 @@
     "            dirpath=r\"/content/drive/MyDrive/Diploma/Checkpoints\",\n",
     "        ),\n",
     "        accelerator=\"auto\",\n",
-    "        max_epoches=3,\n",
+    "        max_epochs=3,\n",
     "        auto_scale_batch_size=True,\n",
     "        accumulate_grad_batches=1,\n",
     "        gradient_clip_val=1,\n",
@@ -90,7 +99,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python /content/CQA_RLHF/sft/lightning/pl_train.py --config_file /content/trainer_config.yaml"
+   ]
   }
  ],
  "metadata": {
