--- a/sft/lightning/run_train.ipynb
+++ b/sft/lightning/run_train.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,77 +10,25 @@
         "id": "tAffuMD0Jx24",
         "outputId": "0f63414e-2151-4b0b-9ae4-c4b6345e6d65"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting torch-xla==1.13\n",
-            "  Using cached https://storage.googleapis.com/tpu-pytorch/wheels/colab/torch_xla-1.13-cp38-cp38-linux_x86_64.whl (151.3 MB)\n",
-            "Requirement already satisfied: cloud-tpu-client==0.10 in /usr/local/lib/python3.8/dist-packages (0.10)\n",
-            "Collecting torch==1.13.1\n",
-            "  Downloading torch-1.13.1-cp38-cp38-manylinux1_x86_64.whl (887.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m887.4/887.4 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: tensorboard-plugin-profile in /usr/local/lib/python3.8/dist-packages (2.11.1)\n",
-            "Requirement already satisfied: google-api-python-client==1.8.0 in /usr/local/lib/python3.8/dist-packages (from cloud-tpu-client==0.10) (1.8.0)\n",
-            "Requirement already satisfied: oauth2client in /usr/local/lib/python3.8/dist-packages (from cloud-tpu-client==0.10) (4.1.3)\n",
-            "Requirement already satisfied: nvidia-cudnn-cu11==8.5.0.96 in /usr/local/lib/python3.8/dist-packages (from torch==1.13.1) (8.5.0.96)\n",
-            "Requirement already satisfied: nvidia-cublas-cu11==11.10.3.66 in /usr/local/lib/python3.8/dist-packages (from torch==1.13.1) (11.10.3.66)\n",
-            "Requirement already satisfied: nvidia-cuda-runtime-cu11==11.7.99 in /usr/local/lib/python3.8/dist-packages (from torch==1.13.1) (11.7.99)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/dist-packages (from torch==1.13.1) (4.5.0)\n",
-            "Requirement already satisfied: nvidia-cuda-nvrtc-cu11==11.7.99 in /usr/local/lib/python3.8/dist-packages (from torch==1.13.1) (11.7.99)\n",
-            "Requirement already satisfied: google-auth>=1.4.1 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client==0.10) (2.16.0)\n",
-            "Requirement already satisfied: google-auth-httplib2>=0.0.3 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client==0.10) (0.1.0)\n",
-            "Requirement already satisfied: six<2dev,>=1.6.1 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client==0.10) (1.15.0)\n",
-            "Requirement already satisfied: uritemplate<4dev,>=3.0.0 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client==0.10) (3.0.1)\n",
-            "Requirement already satisfied: google-api-core<2dev,>=1.13.0 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client==0.10) (1.34.0)\n",
-            "Requirement already satisfied: httplib2<1dev,>=0.9.2 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client==0.10) (0.17.4)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.8/dist-packages (from nvidia-cublas-cu11==11.10.3.66->torch==1.13.1) (57.4.0)\n",
-            "Requirement already satisfied: wheel in /usr/local/lib/python3.8/dist-packages (from nvidia-cublas-cu11==11.10.3.66->torch==1.13.1) (0.38.4)\n",
-            "Requirement already satisfied: absl-py>=1.0.0 in /usr/local/lib/python3.8/dist-packages (from torch-xla==1.13) (1.4.0)\n",
-            "Requirement already satisfied: gviz-api>=1.9.0 in /usr/local/lib/python3.8/dist-packages (from tensorboard-plugin-profile) (1.10.0)\n",
-            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.8/dist-packages (from tensorboard-plugin-profile) (3.19.6)\n",
-            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.8/dist-packages (from tensorboard-plugin-profile) (1.0.1)\n",
-            "Requirement already satisfied: rsa>=3.1.4 in /usr/local/lib/python3.8/dist-packages (from oauth2client->cloud-tpu-client==0.10) (4.9)\n",
-            "Requirement already satisfied: pyasn1>=0.1.7 in /usr/local/lib/python3.8/dist-packages (from oauth2client->cloud-tpu-client==0.10) (0.4.8)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.0.5 in /usr/local/lib/python3.8/dist-packages (from oauth2client->cloud-tpu-client==0.10) (0.2.8)\n",
-            "Requirement already satisfied: googleapis-common-protos<2.0dev,>=1.56.2 in /usr/local/lib/python3.8/dist-packages (from google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (1.58.0)\n",
-            "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in /usr/local/lib/python3.8/dist-packages (from google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (2.25.1)\n",
-            "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from google-auth>=1.4.1->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (5.3.0)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (2022.12.7)\n",
-            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (4.0.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client==0.10) (2.10)\n",
-            "Installing collected packages: torch\n",
-            "  Attempting uninstall: torch\n",
-            "    Found existing installation: torch 1.13.0\n",
-            "    Uninstalling torch-1.13.0:\n",
-            "      Successfully uninstalled torch-1.13.0\n",
-            "Successfully installed torch-1.13.1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install cloud-tpu-client==0.10 torch==1.13.1 https://storage.googleapis.com/tpu-pytorch/wheels/colab/torch_xla-1.13-cp38-cp38-linux_x86_64.whl tensorboard-plugin-profile"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#1.8.0"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1AOPblf7KRBp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#1.8.0"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install google-api-python-client==1.12.1"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,49 +36,14 @@
         "id": "ND2m3UmSJrV7",
         "outputId": "5e32be0f-f906-4320-88a1-d4cd31d0b163"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting google-api-python-client==1.12.1\n",
-            "  Using cached google_api_python_client-1.12.1-py2.py3-none-any.whl (61 kB)\n",
-            "Requirement already satisfied: httplib2<1dev,>=0.9.2 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.12.1) (0.17.4)\n",
-            "Requirement already satisfied: uritemplate<4dev,>=3.0.0 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.12.1) (3.0.1)\n",
-            "Requirement already satisfied: google-auth>=1.16.0 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.12.1) (2.16.0)\n",
-            "Requirement already satisfied: six<2dev,>=1.13.0 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.12.1) (1.15.0)\n",
-            "Requirement already satisfied: google-auth-httplib2>=0.0.3 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.12.1) (0.1.0)\n",
-            "Requirement already satisfied: google-api-core<2dev,>=1.21.0 in /usr/local/lib/python3.8/dist-packages (from google-api-python-client==1.12.1) (1.34.0)\n",
-            "Requirement already satisfied: protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<4.0.0dev,>=3.19.5 in /usr/local/lib/python3.8/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (3.19.6)\n",
-            "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in /usr/local/lib/python3.8/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (2.25.1)\n",
-            "Requirement already satisfied: googleapis-common-protos<2.0dev,>=1.56.2 in /usr/local/lib/python3.8/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (1.58.0)\n",
-            "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from google-auth>=1.16.0->google-api-python-client==1.12.1) (5.3.0)\n",
-            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.8/dist-packages (from google-auth>=1.16.0->google-api-python-client==1.12.1) (4.9)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.8/dist-packages (from google-auth>=1.16.0->google-api-python-client==1.12.1) (0.2.8)\n",
-            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.8/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=1.16.0->google-api-python-client==1.12.1) (0.4.8)\n",
-            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (4.0.0)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (2022.12.7)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client==1.12.1) (2.10)\n",
-            "Installing collected packages: google-api-python-client\n",
-            "  Attempting uninstall: google-api-python-client\n",
-            "    Found existing installation: google-api-python-client 1.12.0\n",
-            "    Uninstalling google-api-python-client-1.12.0:\n",
-            "      Successfully uninstalled google-api-python-client-1.12.0\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "cloud-tpu-client 0.10 requires google-api-python-client==1.8.0, but you have google-api-python-client 1.12.1 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed google-api-python-client-1.12.1\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "!pip install google-api-python-client==1.12.1"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install torch_xla"
-      ],
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -138,11 +51,10 @@
         "id": "thGUsQBBYLfw",
         "outputId": "7aa72030-b0ab-4861-9dec-39f8b186308e"
       },
-      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting torch_xla\n",
@@ -151,13 +63,14 @@
             "Successfully installed torch_xla-1.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install torch_xla"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install tensorflow-neuronx"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,11 +78,10 @@
         "id": "_qV3oD8gZD6H",
         "outputId": "625adb3f-9970-4ca8-8532-900798c5bd16"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting tensorflow-neuronx\n",
@@ -178,6 +90,9 @@
             "Successfully installed tensorflow-neuronx-1.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install tensorflow-neuronx"
       ]
     },
     {
@@ -188,7 +103,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install pytorch-lightning bert_score datasets rouge_score evaluate transformers wandb"
+        "!pip install pytorch-lightning bert_score datasets rouge_score evaluate transformers wandb torchmetrics"
       ]
     },
     {
@@ -203,8 +118,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'new_clone'...\n",
             "remote: Enumerating objects: 194, done.\u001b[K\n",
@@ -232,8 +147,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -268,7 +183,7 @@
         "    seed=42,\n",
         "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    wandb=dict(\n",
-        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
+        "        api=\"\",\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-freezed\"),\n",
         "    ),\n",
@@ -314,9 +229,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip uninstall torchvision"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -324,16 +237,18 @@
         "id": "YTM-brSOK1kR",
         "outputId": "6073a7ab-92e6-4498-c6ff-cc7ad68c8e92"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[33mWARNING: Skipping torchvision as it is not installed.\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
         }
+      ],
+      "source": [
+        "!pip uninstall torchvision"
       ]
     },
     {
@@ -348,8 +263,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2023-02-22 22:53:18.571922: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
@@ -2000,6 +1915,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "base",
       "language": "python",
@@ -2014,12 +1934,7 @@
       "interpreter": {
         "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
       }
-    },
-    "colab": {
-      "provenance": []
-    },
-    "accelerator": "TPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
