Fixed metrics computing

--- a/sft/lightning/run_train.ipynb
+++ b/sft/lightning/run_train.ipynb
@@ -218,7 +218,8 @@
         "            val_check_interval=500,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
-        "            log_every_n_steps = 50\n",
+        "            log_every_n_steps = 5,\n",
+        "            limit_train_batches =10\n",
         "        ),\n",
         "    ),\n",
         ")\n",
