--- a/sft/lightning/run_train.ipynb
+++ b/sft/lightning/run_train.ipynb
@@ -83,6 +83,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip uninstall torchvision"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 14,
       "metadata": {
         "colab": {
@@ -129,14 +138,15 @@
         "    seed=42,\n",
         "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    wandb=dict(\n",
-        "        api=\"\",\n",
+        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-freezed\"),\n",
         "    ),\n",
         "    data=dict(\n",
         "        path_to_data=r\"/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep.json\",\n",
-        "        max_length=512,\n",
-        "        batch_size=3,\n",
+        "        max_length=256,\n",
+        "        batch_size=2,\n",
+        "        pad_for_tpu = True\n",
         "    ),\n",
         "    model_params=dict(\n",
         "        learning_rate=2e-5,\n",
@@ -150,52 +160,28 @@
         "    ),\n",
         "    trainer=dict(\n",
         "        checkpoint=dict(\n",
-        "            every_n_train_steps=1000,\n",
+        "            every_n_train_steps=100,\n",
         "            dirpath=r\"/content/drive/MyDrive/Diploma/Checkpoints\",\n",
         "        ),\n",
         "        ckpt_path=None,\n",
         "        params=dict(\n",
         "            accelerator=\"tpu\",\n",
         "            max_epochs=3,\n",
-        "            auto_scale_batch_size=True,\n",
+        "            auto_scale_batch_size=False,\n",
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=500,\n",
+        "            val_check_interval=50,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
-        "            log_every_n_steps = 5,\n",
-        "            limit_train_batches =10\n",
+        "            log_every_n_steps = 1,\n",
+        "            limit_train_batches =100\n",
         "        ),\n",
         "    ),\n",
         ")\n",
         "\n",
         "with open(\"trainer_config.yaml\", \"w\") as outfile:\n",
         "    yaml.dump(trainer_config, outfile, default_flow_style=False)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YTM-brSOK1kR",
-        "outputId": "6073a7ab-92e6-4498-c6ff-cc7ad68c8e92"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[33mWARNING: Skipping torchvision as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
-      "source": [
-        "!pip uninstall torchvision"
       ]
     },
     {
