--- a/sft/lightning/run_train.ipynb
+++ b/sft/lightning/run_train.ipynb
@@ -138,12 +138,12 @@
         "    seed=42,\n",
         "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    wandb=dict(\n",
-        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
+        "        api=\"\",\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-freezed\"),\n",
         "    ),\n",
         "    data=dict(\n",
-        "        path_to_data=r\"/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep.json\",\n",
+        "        data_dir=r\"/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep.json\",\n",
         "        max_length=256,\n",
         "        batch_size=2,\n",
         "        pad_for_tpu = True\n",
