--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -33,13 +33,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,6 +89,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Run train"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -115,7 +116,7 @@
         "        data_dir=r\"/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep.json\",\n",
         "        max_length=512,\n",
         "        batch_size=16,\n",
-        "        pad_for_tpu = False\n",
+        "        pad_for_tpu = True\n",
         "    ),\n",
         "    model_params=dict(\n",
         "        learning_rate=2e-5,\n",
@@ -166,7 +167,59 @@
       },
       "outputs": [],
       "source": [
-        "!python /content/cqa/sft/lightning/pl_train.py --config_file /content/trainer_config.yaml"
+        "!python /content/cqa/sft/train.py --config_file /content/trainer_config.yaml"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Run test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test_config = dict(\n",
+        "    seed=42,\n",
+        "    cuda=True,\n",
+        "    wandb=dict(\n",
+        "        api=\"text\",\n",
+        "        args=dict(group=\"sft\", job_type=\"test\", name=\"1.2B-freezed-tpu-kaggle\"),\n",
+        "        project_name=\"CQA_RLHF\",\n",
+        "        table_name=\"test-modelname\",\n",
+        "    ),\n",
+        "    model_name=\"EleutherAI/gpt-neo-1.3B\",\n",
+        "    data=dict(data_dir=r\"/kaggle/input/python-qa/1.0-data-div-ans-sep.json\"),\n",
+        "    test_model_path=\"checkpoint_path\",\n",
+        "    model_params=dict(use_cache=True),\n",
+        "    test_params=dict(do_compute_bertscore=False, do_compute_metrics=False),\n",
+        "    generate_params=dict(\n",
+        "        do_sample=False,\n",
+        "        top_k=50,\n",
+        "        top_p=0.9,\n",
+        "        temperature=0,\n",
+        "        num_return_sequences=0,\n",
+        "        no_repeat_ngram_size=2,\n",
+        "        max_new_tokens=512,\n",
+        "    ),\n",
+        ")\n",
+        "\n",
+        "with open(\"test_config.yaml\", \"w\") as outfile:\n",
+        "    yaml.dump(test_config, outfile, default_flow_style=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python /content/cqa/sft/train.py --config_file /content/test_config.yaml"
       ]
     },
     {
