Fixed to TPU kaggle

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -7,42 +7,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "tAffuMD0Jx24",
-        "outputId": "95852118-0c85-4ff0-cb76-fec5b017e8da"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install cloud-tpu-client==0.10 torch==1.13.1 https://storage.googleapis.com/tpu-pytorch/wheels/colab/torch_xla-1.13-cp38-cp38-linux_x86_64.whl tensorboard-plugin-profile"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ND2m3UmSJrV7",
-        "outputId": "4fc71cd1-2fe9-4573-f91d-96ef6286ba02"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install google-api-python-client==1.12.1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "3_3l7S9eJx28",
         "outputId": "4e78f8d6-da9a-463d-95ad-92a46fac8c1a"
       },
       "outputs": [],
       "source": [
-        "!pip install pytorch-lightning bert_score datasets rouge_score evaluate transformers wandb torchmetrics deepspeed"
+        "!pip install pytorch-lightning transformers wandb torchmetrics deepspeed"
       ]
     },
     {
@@ -73,6 +43,8 @@
       "outputs": [],
       "source": [
         "if 'google.colab' in str(get_ipython()):\n",
+        "    !pip install cloud-tpu-client==0.10 torch==1.13.1 https://storage.googleapis.com/tpu-pytorch/wheels/colab/torch_xla-1.13-cp38-cp38-linux_x86_64.whl tensorboard-plugin-profile\n",
+        "    !pip install google-api-python-client==1.12.1\n",
         "    from google.colab import drive\n",
         "    drive.mount('/content/drive')"
       ]
@@ -108,19 +80,19 @@
         "    seed=42,\n",
         "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    wandb=dict(\n",
-        "        api=\"\",\n",
+        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-freezed-cuda\"),\n",
+        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-tpu-kaggle\"),\n",
         "    ),\n",
         "    data=dict(\n",
-        "        data_dir=r\"/content/drive/MyDrive/Diploma/data/1.0-data-div-ans-sep.json\",\n",
-        "        max_length=512,\n",
-        "        batch_size=16,\n",
+        "        data_dir=r\"/kaggle/input/python-qa-v2/1.0-data-div-ans-sep.json\",\n",
+        "        max_length=1024,\n",
+        "        batch_size=1,\n",
         "        pad_for_tpu = True\n",
         "    ),\n",
         "    model_params=dict(\n",
         "        learning_rate=2e-5,\n",
-        "        do_freeze=True,\n",
+        "        do_freeze=False,\n",
         "        use_cache=False,\n",
         "        warmup_steps=100,\n",
         "        adam_betas=[0.9, 0.95],\n",
@@ -130,23 +102,23 @@
         "    ),\n",
         "    trainer=dict(\n",
         "        checkpoint=dict(\n",
-        "            every_n_train_steps=100,\n",
-        "            dirpath=r\"/content/drive/MyDrive/Diploma/Checkpoints\",\n",
+        "            every_n_train_steps=1000,\n",
+        "            dirpath=r\"/kaggle/working/Checkpoints\",\n",
         "        ),\n",
         "        ckpt_path=None,\n",
         "        params=dict(\n",
-        "            accelerator=\"auto\",\n",
+        "            accelerator=\"tpu\",\n",
         "            max_epochs=3,\n",
-        "            auto_scale_batch_size=True,\n",
+        "            auto_scale_batch_size=False,\n",
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=50,\n",
+        "            val_check_interval=500,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
-        "            log_every_n_steps = 1,\n",
-        "            limit_train_batches=100,\n",
-        "            strategy=\"deepspeed_stage_2_offload\"\n",
+        "            log_every_n_steps = 20,\n",
+        "#             limit_train_batches=100,\n",
+        "#             strategy=\"deepspeed_stage_2_offload\"\n",
         "        ),\n",
         "    ),\n",
         ")\n",
