Fixed bug with devices

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -2,6 +2,26 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "46340.950001051984"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "(2**31-1)**0."
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -78,15 +98,15 @@
       "source": [
         "trainer_config = dict(\n",
         "    seed=42,\n",
-        "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
+        "    model_name=\"EleutherAI/gpt-neo-1.3B\",\n",
         "    wandb=dict(\n",
         "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-tpu-kaggle\"),\n",
+        "        args=dict(job_type=\"train\", group=\"sft\", name=\"1.3B-tpu-kaggle\"),\n",
         "    ),\n",
         "    data=dict(\n",
         "        data_dir=r\"/kaggle/input/python-qa-v2/1.0-data-div-ans-sep.json\",\n",
-        "        max_length=1024,\n",
+        "        max_length=512,\n",
         "        batch_size=1,\n",
         "        pad_for_tpu = True\n",
         "    ),\n",
@@ -218,7 +238,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.9.12"
     },
     "orig_nbformat": 4,
