Fixed test metrics

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -2,26 +2,6 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "46340.950001051984"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "(2**31-1)**0."
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -32,7 +12,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install pytorch-lightning transformers wandb torchmetrics deepspeed"
+        "!pip install pytorch-lightning transformers wandb torchmetrics deepspeed nltk"
       ]
     },
     {
@@ -159,7 +139,7 @@
       },
       "outputs": [],
       "source": [
-        "!python /content/cqa/sft/train.py --config_file /content/trainer_config.yaml"
+        "!python /kaggle/working/CQA_RLHF/sft/train.py --config_file /kaggle/working/trainer_config.yaml"
       ]
     },
     {
@@ -181,7 +161,7 @@
         "    cuda=True,\n",
         "    wandb=dict(\n",
         "        api=\"text\",\n",
-        "        args=dict(group=\"sft\", job_type=\"test\", name=\"1.2B-freezed-tpu-kaggle\"),\n",
+        "        args=dict(group=\"sft\", job_type=\"test\", name=\"1.3B-base-test\"),\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        table_name=\"test-modelname\",\n",
         "    ),\n",
@@ -211,7 +191,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!python /content/cqa/sft/train.py --config_file /content/test_config.yaml"
+        "!python /content/cqa/sft/test.py --config_file /content/test_config.yaml"
       ]
     },
     {
