--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -161,22 +161,22 @@
         "    cuda=True,\n",
         "    wandb=dict(\n",
         "        api=\"text\",\n",
-        "        args=dict(group=\"sft\", job_type=\"test\", name=\"1.3B-base-test\"),\n",
+        "        args=dict(group=\"sft\", job_type=\"test\", name=\"125M-base-test\"),\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        table_name=\"test-modelname\",\n",
+        "        table_name=\"125M-base\",\n",
         "    ),\n",
-        "    model_name=\"EleutherAI/gpt-neo-1.3B\",\n",
+        "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    data=dict(data_dir=r\"/kaggle/input/python-qa/1.0-data-div-ans-sep.json\"),\n",
         "    test_model_path=\"checkpoint_path\",\n",
         "    model_params=dict(use_cache=True),\n",
-        "    test_params=dict(do_compute_bertscore=False, do_compute_metrics=False),\n",
+        "    test_params=dict(do_compute_bertscore=True, do_compute_metrics=True),\n",
         "    generate_params=dict(\n",
         "        do_sample=False,\n",
         "        top_k=50,\n",
         "        top_p=0.9,\n",
         "        temperature=0,\n",
-        "        num_return_sequences=0,\n",
-        "        no_repeat_ngram_size=2,\n",
+        "        # num_return_sequences=0,\n",
+        "        # no_repeat_ngram_size=2,\n",
         "        max_new_tokens=512,\n",
         "    ),\n",
         ")\n",
