Added freezing for some epoches from config

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -98,7 +98,8 @@
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
         "        do_compute_metrics = False,\n",
-        "        do_compute_bertscore = False\n",
+        "        do_compute_bertscore = False,\n",
+        "        nr_frozen_epochs = 2,\n",
         "    ),\n",
         "    trainer=dict(\n",
         "        checkpoint=dict(\n",
