--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -70,6 +70,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "int(10/3)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "YXCMjOSDJx2-"
@@ -94,7 +114,7 @@
         "        learning_rate=2e-5,\n",
         "        do_freeze=False,\n",
         "        use_cache=False,\n",
-        "        warmup_steps=100,\n",
+        "        warmup_steps_per_cent=0.01,\n",
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
         "        do_compute_metrics = False,\n",
