--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "K34s1lAzJx2-"
       },
@@ -70,26 +70,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "execution_count": 1,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "int(10/3)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "YXCMjOSDJx2-"
@@ -100,7 +80,7 @@
         "    seed=42,\n",
         "    model_name=\"EleutherAI/gpt-neo-1.3B\",\n",
         "    wandb=dict(\n",
-        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
+        "        api=\"text\",\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        args=dict(job_type=\"train\", group=\"sft\", name=\"1.3B-tpu-kaggle\"),\n",
         "    ),\n",
@@ -173,15 +153,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "test_config = dict(\n",
         "    seed=42,\n",
         "    cuda=True,\n",
+        "    log_file = '',\n",
+        "    save_steps = 100,\n",
         "    wandb=dict(\n",
-        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
+        "        api=\"text\",\n",
         "        args=dict(group=\"sft\", job_type=\"test\", name=\"125M-base-test\"),\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        table_name=\"125M-base\",\n",
@@ -192,9 +174,9 @@
         "    model_params=dict(use_cache=True, do_freeze=False),\n",
         "    test_params=dict(do_compute_bertscore=False, do_compute_metrics=True),\n",
         "    generate_params=dict(\n",
-        "        do_sample=False,\n",
-        "        top_k=10,\n",
-        "        # top_p=0.9,\n",
+        "        do_sample=True,\n",
+        "        # top_k=10,\n",
+        "        top_p=0.9,\n",
         "        # temperature=0,\n",
         "        # num_return_sequences=0,\n",
         "        # no_repeat_ngram_size=2,\n",
