--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -82,12 +82,12 @@
         "    wandb=dict(\n",
         "        api=\"text\",\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"sft\", name=\"1.3B-tpu-kaggle\"),\n",
+        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-lr_1e_6-1_ws-freezed_10-api_usage\"),\n",
         "    ),\n",
         "    data=dict(\n",
         "        data_dir=r\"/kaggle/input/python-qa-v2/1.0-data-div-ans-sep.json\",\n",
         "        max_length=512,\n",
-        "        batch_size=1,\n",
+        "        batch_size=8,\n",
         "        pad_for_tpu = True\n",
         "    ),\n",
         "    model_params=dict(\n",
@@ -105,6 +105,9 @@
         "        checkpoint=dict(\n",
         "            every_n_train_steps=1000,\n",
         "            dirpath=r\"/kaggle/working/Checkpoints\",\n",
+        "            log_obg = 'val_bleu',\n",
+        "            mode = 'max',\n",
+        "\n",
         "        ),\n",
         "        ckpt_path=None,\n",
         "        params=dict(\n",
@@ -114,7 +117,7 @@
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=500,\n",
+        "            val_check_interval=40,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
         "            log_every_n_steps = 20,\n",
@@ -175,11 +178,11 @@
         "    test_params=dict(do_compute_bertscore=False, do_compute_metrics=True),\n",
         "    generate_params=dict(\n",
         "        do_sample=True,\n",
-        "        # top_k=10,\n",
+        "        top_k=50,\n",
         "        top_p=0.9,\n",
         "        # temperature=0,\n",
         "        # num_return_sequences=0,\n",
-        "        # no_repeat_ngram_size=2,\n",
+        "        no_repeat_ngram_size=2,\n",
         "        max_new_tokens=512,\n",
         "    ),\n",
         ")\n",
