Added learning from checkpoint

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -12,7 +12,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install pytorch-lightning transformers wandb torchmetrics deepspeed nltk"
+        "!pip install pytorch-lightning==1.9.2 transformers torchmetrics deepspeed nltk wandb"
       ]
     },
     {
