Enable zero question loss

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -78,23 +78,23 @@
       "source": [
         "trainer_config = dict(\n",
         "    seed=42,\n",
-        "    model_name=\"EleutherAI/gpt-neo-1.3B\",\n",
+        "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    wandb=dict(\n",
-        "        api=\"text\",\n",
+        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-lr_1e_6-1_ws-freezed_10-api_usage\"),\n",
+        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-lr_1e_6-3_ws-freezed_7-epoches\"),\n",
         "    ),\n",
         "    data=dict(\n",
-        "        data_dir=r\"/kaggle/input/python-qa-v2/1.0-data-div-ans-sep.json\",\n",
+        "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
         "        max_length=512,\n",
         "        batch_size=8,\n",
         "        pad_for_tpu = True\n",
         "    ),\n",
         "    model_params=dict(\n",
-        "        learning_rate=2e-5,\n",
+        "        learning_rate=1e-6,\n",
         "        do_freeze=False,\n",
         "        use_cache=False,\n",
-        "        warmup_steps_per_cent=0.01,\n",
+        "        warmup_steps_per_cent=0.03,\n",
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
         "        do_compute_metrics = False,\n",
@@ -105,19 +105,19 @@
         "        checkpoint=dict(\n",
         "            every_n_train_steps=1000,\n",
         "            dirpath=r\"/kaggle/working/Checkpoints\",\n",
-        "            log_obg = 'val_bleu',\n",
-        "            mode = 'max',\n",
+        "            log_obg = 'val_loss',\n",
+        "            mode = 'min',\n",
         "\n",
         "        ),\n",
         "        ckpt_path=None,\n",
         "        params=dict(\n",
         "            accelerator=\"tpu\",\n",
-        "            max_epochs=3,\n",
-        "            auto_scale_batch_size=False,\n",
+        "            max_epochs=7,\n",
+        "#             auto_scale_batch_size=False,\n",
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=40,\n",
+        "            val_check_interval=500,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
         "            log_every_n_steps = 20,\n",
@@ -163,10 +163,10 @@
         "test_config = dict(\n",
         "    seed=42,\n",
         "    cuda=True,\n",
-        "    log_file = '',\n",
+        "    log_file = '/content/test-base-125M.csv',\n",
         "    save_steps = 100,\n",
         "    wandb=dict(\n",
-        "        api=\"text\",\n",
+        "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        args=dict(group=\"sft\", job_type=\"test\", name=\"125M-base-test\"),\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        table_name=\"125M-base\",\n",
