Padding max length for inference

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -88,7 +88,8 @@
         "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
         "        max_length=512,\n",
         "        batch_size=8,\n",
-        "        pad_for_tpu = True\n",
+        "        pad_for_tpu = True,\n",
+        "        zero_question_labels=True,\n",
         "    ),\n",
         "    model_params=dict(\n",
         "        learning_rate=1e-6,\n",
