Test reward fixes

--- a/reward_model/mse_regression/run.ipynb
+++ b/reward_model/mse_regression/run.ipynb
@@ -78,11 +78,11 @@
       "source": [
         "trainer_config = dict(\n",
         "    seed=42,\n",
-        "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
+        "    model_name=\"Myashka/125M_GPTneo_reward_base\",\n",
         "    wandb=dict(\n",
         "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"reward-model\", name=\"125M-lr_1e_6-3_ws-freezed_7-epoches\"),\n",
+        "        args=dict(job_type=\"train\", group=\"reward\", name=\"125M-lr_2e_5-1_ws-api_usage-freezed_3\"),\n",
         "    ),\n",
         "    data=dict(\n",
         "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
@@ -91,14 +91,14 @@
         "        pad_for_tpu = True,\n",
         "    ),\n",
         "    model_params=dict(\n",
-        "        learning_rate=1e-6,\n",
+        "        learning_rate=2e-5,\n",
         "        do_freeze=False,\n",
         "        use_cache=False,\n",
-        "        warmup_steps_per_cent=0.03,\n",
+        "        warmup_steps_per_cent=0.01,\n",
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
-        "        do_compute_metrics = False,\n",
-        "        nr_frozen_epochs = 2,\n",
+        "        do_compute_metrics = True,\n",
+        "        nr_frozen_epochs = 3,\n",
         "    ),\n",
         "    trainer=dict(\n",
         "        checkpoint=dict(\n",
@@ -111,12 +111,11 @@
         "        ckpt_path=None,\n",
         "        params=dict(\n",
         "            accelerator=\"tpu\",\n",
-        "            max_epochs=7,\n",
-        "#             auto_scale_batch_size=False,\n",
+        "            max_epochs=50,\n",
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=500,\n",
+        "            val_check_interval=104,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
         "            log_every_n_steps = 20,\n",
@@ -142,7 +141,7 @@
       },
       "outputs": [],
       "source": [
-        "!python /kaggle/working/CQA_RLHF/sft/train.py --config_file /kaggle/working/trainer_config.yaml"
+        "!python /kaggle/working/CQA_RLHF/reward_model/mse_regression/train.py --config_file /kaggle/working/trainer_config.yaml"
       ]
     },
     {
@@ -166,24 +165,15 @@
         "    save_steps = 100,\n",
         "    wandb=dict(\n",
         "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
-        "        args=dict(group=\"sft\", job_type=\"test\", name=\"125M-base-test\"),\n",
+        "        args=dict(group=\"reward\", job_type=\"test\", name=\"125M-base-test\"),\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        table_name=\"125M-base\",\n",
+        "        table_name=\"125M-reward\",\n",
         "    ),\n",
         "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
         "    data=dict(data_dir=r\"/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep.json\"),\n",
         "    test_model_path=None,\n",
-        "    model_params=dict(use_cache=True, do_freeze=False),\n",
-        "    test_params=dict(do_compute_bertscore=False, do_compute_metrics=True),\n",
-        "    generate_params=dict(\n",
-        "        do_sample=True,\n",
-        "        top_k=50,\n",
-        "        top_p=0.9,\n",
-        "        # temperature=0,\n",
-        "        # num_return_sequences=0,\n",
-        "        no_repeat_ngram_size=2,\n",
-        "        max_new_tokens=512,\n",
-        "    ),\n",
+        "    model_params=dict(use_cache=True, do_freeze=True),\n",
+        "    test_params=dict(do_compute_metrics=True),\n",
         ")\n",
         "\n",
         "with open(\"test_config.yaml\", \"w\") as outfile:\n",
@@ -196,7 +186,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!python /content/cqa/sft/test.py --config_file /content/test_config.yaml"
+        "!python /content/cqa/reward/mse_regression/test.py --config_file /content/test_config.yaml"
       ]
     },
     {
