refactored reward training

--- a/reward_model/mse_regression/run.ipynb
+++ b/reward_model/mse_regression/run.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "YXCMjOSDJx2-"
       },
@@ -88,11 +88,11 @@
         "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
         "        max_length=512,\n",
         "        batch_size=8,\n",
-        "        pad_for_tpu = True,\n",
+        "        truncate_promt = True,\n",
+        "        on_tpu=False,\n",
         "    ),\n",
         "    model_params=dict(\n",
         "        learning_rate=2e-5,\n",
-        "        do_freeze=False,\n",
         "        use_cache=False,\n",
         "        warmup_steps_per_cent=0.01,\n",
         "        adam_betas=[0.9, 0.95],\n",
@@ -104,8 +104,8 @@
         "        checkpoint=dict(\n",
         "            every_n_train_steps=1000,\n",
         "            dirpath=r\"/kaggle/working/Checkpoints\",\n",
-        "            log_obg = 'val_loss',\n",
-        "            mode = 'min',\n",
+        "            log_obg = 'val_accuracy',\n",
+        "            mode = 'max',\n",
         "\n",
         "        ),\n",
         "        ckpt_path=None,\n",
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -163,17 +163,28 @@
         "    cuda=True,\n",
         "    log_file = '/content/test-base-125M.csv',\n",
         "    save_steps = 100,\n",
+        "    test_params=dict(\n",
+        "        save_steps=100,\n",
+        "        test_model_path=r'/content/artifacts/model-34980p14:v4/model.ckpt',\n",
+        "        log_file='/content/test-tuned-api_usage-answer_loss-bredogenerated-125M.csv',\n",
+        "        use_cache=True,\n",
+        "    ),\n",
         "    wandb=dict(\n",
         "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        args=dict(group=\"reward\", job_type=\"test\", name=\"125M-base-test\"),\n",
         "        project_name=\"CQA_RLHF\",\n",
         "        table_name=\"125M-reward\",\n",
         "    ),\n",
-        "    model_name=\"EleutherAI/gpt-neo-125M\",\n",
-        "    data=dict(data_dir=r\"/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep.json\"),\n",
+        "    model_name=\"EleutherAI/gpt-neo-125m\",\n",
+        "    data=dict(\n",
+        "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
+        "        max_length=512,\n",
+        "        split='test',\n",
+        "        padding_side='right',\n",
+        "        padding=False,\n",
+        "        truncate_promt = True,\n",
+        "    ),\n",
         "    test_model_path=None,\n",
-        "    model_params=dict(use_cache=True, do_freeze=True),\n",
-        "    test_params=dict(do_compute_metrics=True),\n",
         ")\n",
         "\n",
         "with open(\"test_config.yaml\", \"w\") as outfile:\n",
